@@ -116,6 +116,8 @@ Fixed bugs:
 * <scp> now has (local|remote)tofile attributes to rename files on the
   fly.  Bugzilla Report 26758.
 
+* <telnet> didn't close the session.  Bugzilla Report 25935.
+
 Other changes:
 --------------
 * doc fix concerning the dependencies of the ftp task
